// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders IssuePrioritySort with all prop options: {"selectedSortFilter":""} 1`] = `
"<z-badge type=\\"success\\" size=\\"md\\">
  <z-menu direction=\\"right\\" width=\\"small\\" class=\\"text-vanilla-100\\"></z-menu>
</z-badge>"
`;

exports[`renders IssuePrioritySort with all prop options: {"selectedSortFilter":"decreasing-priority"} 1`] = `
"<z-badge type=\\"success\\" is-dot=\\"true\\" size=\\"md\\">
  <zbutton-stub button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"flex items-center gap-x-1\\"><zicon-stub icon=\\"chevrons-down\\"></zicon-stub> <span>Priority</span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;

exports[`renders IssuePrioritySort with all prop options: {"selectedSortFilter":"increasing-priority"} 1`] = `
"<z-badge type=\\"success\\" is-dot=\\"true\\" size=\\"md\\">
  <zbutton-stub button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"flex items-center gap-x-1\\"><zicon-stub icon=\\"chevrons-up\\"></zicon-stub> <span>Priority</span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;
